# Xquizlet

./: .gitignore  README.md  main.py  pyproject.toml
tools/: make-csv.py
utils/: config.py  panel.py
