[tool.poetry]
name = "xquizlet"
version = "0.1.0"
description = ""
authors = ["nakasyou <syoutarou1103@outlook.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
